--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <section id="about">
     <h2>About Me</h2>
     <div class="about-container">
-      <img src="images/profile.jpg" alt="Aidan Strydom" class="profile-photo">
-      <p>This is a short bio about me. I am a passionate developer who loves building projects and learning new technologies.</p>
+      <img src="images/me.jpg" alt="Aidan Strydom" class="profile-photo">
+      <p>I am passionate about solving problems in web design, and making enjoyable and satisfying designs. Effective solutions and creative solutions bring me joy.</p>
     </div>
   </section>
 
@@ -38,7 +38,7 @@
       <div class="project-card">
         <img src="images/project1.jpg" alt="Project One Screenshot">
         <h3>Project One</h3>
-        <p>Brief description of Project One goes here.</p>
+        <p>Khanban app that allows one to create and manage tasks on your plate.</p>
         <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
         <a href="#" target="_blank">View Project</a>
       </div>
@@ -47,8 +47,8 @@
       <div class="project-card">
         <img src="images/project2.jpg" alt="Project Two Screenshot">
         <h3>Project Two</h3>
-        <p>Brief description of Project Two goes here.</p>
-        <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
+        <p>Cat version of instagram to showcase my HTML and CSS learning.</p>
+        <p><strong>Technologies:</strong> HTML, CSS</p>
         <a href="#" target="_blank">View Project</a>
       </div>
 
@@ -58,9 +58,8 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">yourusername</a></p>
+    <p>Email: <a href="mailto:aidanstrydom02@gmail.com">aidanstrydom02@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/AidanStrydom" target="_blank">Aidan Strydom</a></p>
   </section>
 
   <!-- Footer -->
